<resources>
    <string name="app_name">MDT Battery</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="reset">Reset</string>
    <string name="default_time">--:--</string>
    <string name="max_charge">Max charge: %s</string>
    <string name="min_charge">Min charge: %s</string>
    <string name="battery_exception">Battery exception: %s</string>
    <string name="execute_boot">Execute on boot</string>
    <string name="vibrate_change">Vibrate on discharge</string>
    <string name="avg_base">Average base: %s</string>
    <string name="mah_time">Time of mAh: %s</string>
    <string name="notification">Notifications</string>
    <string name="count">Count</string>
    <string name="advanced">Advanced</string>
    <string name="mah_multiplier">mAh Multiplier: %.2f</string>
    <string name="general">General</string>
    <string name="default_dialog_edit">1.0</string>
    <string name="average_active">Average &#x029D6; active</string>
    <string name="ends_at">Ends at</string>
    <string name="utilization">Utilization</string>
    <string name="expectation">Expectation</string>
    <string name="graph">Graph</string>

    <string name="active_time">Active time</string>
    <string name="inactive_time">Inactive time</string>
    <string name="average_inactive">Average &#x029D7; inactive</string>
    <string name="remaining_active">Remaining active</string>
    <string name="remaining_inactive">Remaining inactive</string>
    <string name="time_list">Time list</string>
    <string name="mah_current">Mah current</string>
    <string name="temperature">Temperature</string>
    <string name="min">Min.</string>
    <string name="max">Máx.</string>
    <string name="actual">Current</string>
    <string name="default_current_mah" translatable="false">--</string>
    <string name="mah" translatable="false">mAh</string>
    <string name="temperature_unit" translatable="false">°C</string>
    <string name="sample_item_discharge" translatable="false">80%</string>
    <string name="notification_average_on">Avg on</string>
    <string name="notification_target_on">Until %d on</string>
    <string name="notification_avg_off">Avg off</string>
    <string name="notification_target_off">Until %d off</string>
    <string name="bottom_nav_meter">Mah</string>
    <string name="bottom_nav_general">Use</string>
    <string name="bottom_nav_list">List</string>
    <string name="total_time">Total time</string>
    <string name="charge_active">Charging active</string>
    <string name="charge_inactive">Charging inactive</string>
    <string name="reset_zoom">Reset zoom</string>
    <string name="persist_data">Persist data</string>
    <string name="capacidade_da_bateria">Battery capacity: %.1f</string>

    <string name="dialog_average_base_on">Average calculation basis</string>
    <string name="dialog_mah_collection_time">mAh collection time</string>
    <string name="dialog_maximum_charge">Maximum battery charge</string>
    <string name="dialog_minimum_charge">Minimum charge</string>
    <string name="dialog_mah_multiplier">mAh multiplier</string>
    <string name="dialog_mah_multiplier_set">Ajust multiplier to %.2f?</string>
    <string name="dialog_battery_capacity">Battery capacity</string>
    <string name="action_bar_meter">Meter</string>
    <string name="action_bar_general">General</string>
    <string name="action_bar_list">List</string>
    <string name="dialog_reset_message">Would you like to reset all data?</string>
    <string name="day_sunday">Sun</string>
    <string name="day_monday">Mon</string>
    <string name="day_tuesday">Tue</string>
    <string name="day_wednesday">Wed</string>
    <string name="day_thursday">Thu</string>
    <string name="day_friday">Fri</string>
    <string name="day_saturday">Sat</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_apply">Apply</string>
    <string name="version">Version: 1.0.0</string>
    <string name="about">About</string>
    <string name="dialog_open_license">Open license for: \n%s?</string>
    <string name="dialog_open_text">Open</string>
    <string name="battery_service">Battery service</string>
    <string name="circle_progress_view" translatable="false">Circle Progress View</string>
    <string name="mp_android_chart" translatable="false">MP Android Chart</string>
    <string name="marker_sample" translatable="false">400</string>
</resources>