<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Theme.GSBatt.MainTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/general" />

        <androidx.cardview.widget.CardView
            style="@style/Theme.GSBatt.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/settings_switch_boot"
                    style="@style/Theme.GSBatt.SettingsSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/execute_boot" />

                <Button
                    android:id="@+id/settings_button_exception"
                    style="@style/Theme.GSBatt.SettingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/battery_exception" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/Theme.GSBatt.MainTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/notification" />

        <androidx.cardview.widget.CardView
            style="@style/Theme.GSBatt.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/settings_button_max_charge"
                    style="@style/Theme.GSBatt.SettingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/max_charge" />

                <Button
                    android:id="@+id/settings_button_min_charge"
                    style="@style/Theme.GSBatt.SettingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/min_charge" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/settings_switch_vibrate"
                    style="@style/Theme.GSBatt.SettingsSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vibrate_change" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/Theme.GSBatt.MainTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/count" />

        <androidx.cardview.widget.CardView
            style="@style/Theme.GSBatt.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/settings_button_avg_size"
                    style="@style/Theme.GSBatt.SettingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avg_base" />

                <Button
                    android:id="@+id/settings_button_mah"
                    style="@style/Theme.GSBatt.SettingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxWidth="320dp"
                    android:text="@string/mah_time" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/Theme.GSBatt.MainTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/advanced" />

        <androidx.cardview.widget.CardView
            style="@style/Theme.GSBatt.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/settings_switch_persist"
                    style="@style/Theme.GSBatt.SettingsSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/persist_data" />

                <Button
                    android:id="@+id/settings_button_mah_x"
                    style="@style/Theme.GSBatt.SettingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxWidth="320dp"
                    android:text="@string/mah_multiplier" />

                <Button
                    android:id="@+id/settings_button_battery_mah"
                    style="@style/Theme.GSBatt.SettingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxWidth="320dp"
                    android:text="@string/capacidade_da_bateria" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/Theme.GSBatt.MainTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/about" />

        <androidx.cardview.widget.CardView
            style="@style/Theme.GSBatt.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <Button
                    android:id="@+id/settings_boot_cpv"
                    style="@style/Theme.GSBatt.SettingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/circle_progress_view" />

                <Button
                    android:id="@+id/settings_button_mpac"
                    style="@style/Theme.GSBatt.SettingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mp_android_chart" />

                <TextView
                    android:id="@+id/settings_text_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:padding="14dp"
                    android:text="@string/version" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>