<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Theme.GSBatt.CardView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialog_text_title"
                style="@style/Theme.GSBatt.TitleText"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp" />

            <EditText
                android:id="@+id/dialog_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:autofillHints="1.0"
                android:gravity="center"
                android:hint="@string/default_dialog_edit"
                android:inputType="numberDecimal"
                android:minWidth="48dp"
                android:minHeight="48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:textSize="13sp"
                android:textAllCaps="false"
                android:background="?android:selectableItemBackground"
                android:id="@+id/dialog_button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/dialog_cancel"
                android:textColor="?attr/colorPrimary" />

            <Button
                android:textSize="13sp"
                android:textAllCaps="false"
                android:background="?android:selectableItemBackground"
                android:id="@+id/dialog_button_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/dialog_apply"
                android:textColor="?attr/colorPrimary" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
